Upadting the s3 bucket name

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,7 @@ phases:
         commands:
             - hugo
             - echo "S3 Upload Beginning"
-            - aws s3 sync public/ s3://randall.bot/ --region us-east-1 --delete --sse AES256
+            - aws s3 sync public/ s3://moski.me/ --region us-east-1 --delete --sse AES256
             - echo "S3 Upload Complete"
     post_build:
         commands:
